--- a/home/index.html
+++ b/home/index.html
@@ -6,71 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="../global.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../../global.css">
+    <link rel="stylesheet" href="../../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <title>iShift - Low Code + Machine Learning</title>
     <link href="assets/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="../assets/favicon.png" rel="icon">
+    <link href="../../assets/favicon.png" rel="icon">
     <link href="assets/apple-touch-icon.png" rel="apple-touch-icon">
-    <link href="../assets/favicon.png" rel="icon">
+    <link href="../../assetsfavicon.png" rel="icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-    <script src="./index.js"></script>
+    <script src="../home/index.html"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 
 <body id="content">
     <header class="d-flex align-items-center justify-space-between fixed-top">
         <nav class="navbar fixed-top bg-white navbar-expand-lg navbar-light w-100">
-            <a class="navbar-brand" href="./index.html"><img class="img-fluid" style="max-height: 50px;"
-                    src="../assets/ishift-logo-blue.png" alt="" srcset=""></a>
+            <a class="navbar-brand" onclick="removeLastPathSegment('/Ishift.io/home/index.html')"><img class="img-fluid" style="max-height: 50px;"
+                    src="../../assetsishift-logo-blue.png" alt="" srcset=""></a>
             <div class="icon" onclick="handleOnClick()"><i class="bi bi-list"></i></div>
 
             <div class="collapse navbar-collapse justify-content-end navbarMenu" id="navbarNavDropdown">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" onclick="removeLastPathSegment('/home/index.html')">Home </a>
+                        <li class="nav-item">
+<a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/home/index.html')">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/solutions/index.html')">Solutions</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/solutions/index.html')">Solutions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/about/index.html')">About</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/about/index.html')">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/careers/index.html')">Careers</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/careers/index.html')">Careers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/clients/index.html')">Clients &
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/clients/index.html')">Clients &
                             Partners</a>
                     </li>
                 </ul>
             </div>
             <li class="btn-lets-talk">
-                <a class="nav-link" onclick="removeLastPathSegment('/contact/index.html')">Contacts</a>
+               <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/contact/index.html')">Contacts</a>
             </li>
             <div class="mobile-nav" id="mobile-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" onclick="removeLastPathSegment('/home/index.html')">Home </a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/home/index.html')">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/solutions/index.html')">Solutions</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/solutions/index.html')">Solutions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/about/index.html')">About</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/about/index.html')">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/careers/index.html')">Careers</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/careers/index.html')">Careers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/clients/index.html')">Clients & Partners</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/clients/index.html')">Clients &
+                            Partners</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/contact/index.html')">Contacts</a>
+                       <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/contact/index.html')">Contacts</a>
                     </li>
                 </ul>
             </div>
@@ -92,10 +93,10 @@
                     <div class="button-wrapper">
                         <span onclick="document.getElementById('service').scrollIntoView({behavior:'smooth'})"
                             class="btn-get-started">Our Services</span>
-                        <a href="./index.html" class="btn-services">Get Started</a>
+                        <a onclick="removeLastPathSegment('/Ishift.io/solutions/index.html')" class="btn-services">Get Started</a>
                     </div>
                 </div>
-                <img class="hero-img w-50" src="../assets/hero-img.svg" alt="hero svg">
+                <img class="hero-img w-50" src="../../assetshero-img.svg" alt="hero svg">
             </div>
         </div>
         <section class="services container" id="service">
@@ -248,7 +249,7 @@
             <div class="row justify-content-between">
                 <div class="col-lg-4 col-md-6 footer-info">
                     <div class="logo">
-                        <a href="index.html"><img src="../assets/ishift.jpeg" alt="" class="img-fluid"></a>
+                        <a href="index.html"><img src="../../assetsishift.jpeg" alt="" class="img-fluid"></a>
                     </div>
                     <p>
                         <br>iShift offers deep low-code technical leadership and Agile delivery expertise. Our
@@ -257,17 +258,17 @@
                     </p>
                 </div>
 
-                <div class="col-md-2 footer-links">
+<div class="col-md-2 footer-links">
                     <ul>
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./index.html">Solutions</a></li>
-                        <li><a href="./index.html">About</a></li>
+                        <li><a onclick="removeLastPathSegment('/Ishift.io/home/index.html')">Home</a></li>
+                        <li><a onclick="removeLastPathSegment('/Ishift.io/solutions/index.html')">Solutions</a></li>
+                        <li><a onclick="removeLastPathSegment('/Ishift.io/about/index.html')">About</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2 footer-links second-menu">
                     <ul>
-                        <li><a href="./index.html">Careers</a></li>
-                        <li><a href="./index.html">Clients & Partners</a></li>
+                        <li><a onclick="removeLastPathSegment('/Ishift.io/careers/index.html')">Careers</a></li>
+                        <li><a onclick="removeLastPathSegment('/Ishift.io/clients/index.html')">Clients & Partners</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 location">
@@ -285,7 +286,7 @@
                 </div>
             </div>
             <a target="_blank" href="https://www.linkedin.com/company/ishift-io/">
-                <img style="margin-left:auto;display: block;" src="../assets/linkedin.png" alt="Linkedin icon"
+                <img style="margin-left:auto;display: block;" src="../../assetslinkedin.png" alt="Linkedin icon"
                     width="38px" />
             </a>
         </div>
