--- a/solutions/index.html
+++ b/solutions/index.html
@@ -23,14 +23,15 @@
 <body id="content">
     <header class="d-flex align-items-center justify-space-between fixed-top">
         <nav class="navbar fixed-top bg-white navbar-expand-lg navbar-light w-100">
-            <a class="navbar-brand" href="./index.html"><img class="img-fluid" style="max-height: 40px;"
+            <a class="navbar-brand" onclick="removeLastPathSegment('/Ishift.io/home/index.html')"><img class="img-fluid" style="max-height: 40px;"
                     src="../assets/ishift-logo-blue.png" alt="" srcset=""></a>
             <div class="icon" onclick="handleOnClick()"><i class="bi bi-list"></i></div>
 
             <div class="collapse navbar-collapse justify-content-end navbarMenu" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/home/index.html')">Home </a>
+                        <li class="nav-item">
+<a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/home/index.html')">Home </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/solutions/index.html')">Solutions</a>
@@ -53,7 +54,8 @@
             <div class="mobile-nav" id="mobile-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/home/index.html')">Home </a>
+                        <li class="nav-item">
+<a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/home/index.html')">Home </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/solutions/index.html')">Solutions</a>
@@ -141,17 +143,17 @@
                     </p>
                 </div>
 
-                <div class="col-md-2 footer-links">
+<div class="col-md-2 footer-links">
                     <ul>
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./index.html">Solutions</a></li>
-                        <li><a href="./index.html">About</a></li>
+                        <li><a onclick="removeLastPathSegment('/Ishift.io/home/index.html')">Home</a></li>
+                        <li><a onclick="removeLastPathSegment('/Ishift.io/solutions/index.html')">Solutions</a></li>
+                        <li><a onclick="removeLastPathSegment('/Ishift.io/about/index.html')">About</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2 footer-links second-menu">
                     <ul>
-                        <li><a href="./index.html">Careers</a></li>
-                        <li><a href="./index.html">Clients & Partners</a></li>
+                        <li><a onclick="removeLastPathSegment('/Ishift.io/careers/index.html')">Careers</a></li>
+                        <li><a onclick="removeLastPathSegment('/Ishift.io/clients/index.html')">Clients & Partners</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 location">
