--- a/about/index.html
+++ b/about/index.html
@@ -23,51 +23,51 @@
 <body>
     <header class="d-flex align-items-center justify-space-between fixed-top">
         <nav class="navbar fixed-top bg-white navbar-expand-lg navbar-light w-100">
-            <a class="navbar-brand" href="./index.html"><img class="img-fluid" style="max-height: 40px;"
+            <a class="navbar-brand" href="../"><img class="img-fluid" style="max-height: 40px;"
                     src="../assets/ishift-logo-blue.png" alt="" srcset=""></a>
             <div class="icon" onclick="handleOnClick()"><i class="bi bi-list"></i></div>
 
             <div class="collapse navbar-collapse justify-content-end navbarMenu" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="../home/index.html">Home </a>
+                        <a class="nav-link" href="../">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../solution/index.html">Solutions</a>
+                        <a class="nav-link" href="../solution/">Solutions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../about/index.html">About</a>
+                        <a class="nav-link" href="../about/">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../career/index.html">Careers</a>
+                        <a class="nav-link" href="../career/">Careers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../client/index.html">Clients & Partners</a>
+                        <a class="nav-link" href="../client/">Clients & Partners</a>
                     </li>
                 </ul>
             </div>
             <li class="btn-lets-talk">
-                <a class="nav-link" href="../contact/index.html">Contacts</a>
+                <a class="nav-link" href="../contact/">Contacts</a>
             </li>
             <div class="mobile-nav" id="mobile-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="../home/index.html">Home </a>
+                        <a class="nav-link" href="../">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../solution/index.html">Solutions</a>
+                        <a class="nav-link" href="../solution/">Solutions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../about/index.html">About</a>
+                        <a class="nav-link" href="../about/">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../career/index.html">Careers</a>
+                        <a class="nav-link" href="../career/">Careers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../client/index.html">Clients & Partners</a>
+                        <a class="nav-link" href="../client/">Clients & Partners</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../contact/index.html">Contacts</a>
+                        <a class="nav-link" href="../contact/">Contacts</a>
                     </li>
                 </ul>
             </div>
@@ -118,7 +118,7 @@
             <div class="row justify-content-between">
                 <div class="col-lg-4 col-md-6 footer-info">
                     <div class="logo">
-                        <a href="index.html"><img src="../assets/ishift.jpeg" alt="" class="img-fluid"></a>
+                        <a href="../"><img src="../assets/ishift.jpeg" alt="" class="img-fluid"></a>
                     </div>
                     <p>
                         <br>iShift offers deep low-code technical leadership and Agile delivery expertise. Our
@@ -129,15 +129,15 @@
 
                 <div class="col-md-2 footer-links">
                     <ul>
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./solutions.html">Solutions</a></li>
-                        <li><a href="./about.html">About</a></li>
+                        <li><a href="../">Home</a></li>
+                        <li><a href="../solution/">Solutions</a></li>
+                        <li><a href="../about/">About</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2 footer-links second-menu">
                     <ul>
-                        <li><a href="../career/index.html">Careers</a></li>
-                        <li><a href="../client/index.html">Clients & Partners</a></li>
+                        <li><a href="../career/">Careers</a></li>
+                        <li><a href="../client/">Clients & Partners</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3 location">
